pkg/provider/kubernetes/gateway/fixtures/httproute/with_backend_tls_policy_secret.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway-class
spec:
  controllerName: traefik.io/gateway-controller

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: my-gateway-class
  listeners: # Use GatewayClass defaults for listener definition.
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same

---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-app-1
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "foo.com"
  rules:
    - matches:
        - path:
            type: Exact
            value: /bar
      backendRefs:
        - name: whoami
          port: 80
          weight: 1
          kind: Service
          group: ""

---
kind: BackendTLSPolicy
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: policy-1
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: whoami
  validation:
    hostname: whoami
    caCertificateRefs:
      - group: ""
        kind: Secret
        name: ca-file

---
apiVersion: v1
kind: Secret
metadata:
  name: ca-file
  namespace: default
data:
  ca.crt: Q0ExLXNlY3JldA==
